2004-10-28 Alain Magloire
	Add ICDIValue.getType() and ICDIExpression.geType() new methods.

2004-10-26 Alain Magloire
	Remove ICDIMemoryManager in CDI
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/MemoryManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/MemoryBlock.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/event/CreatedEvent.java

2004-10-26 Alain Magloire
	Remove of ICDISourceManager in CDI
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java

	* mi/org/eclipse/cdt/debug/mi/core/cdi/command/MIDataDsassemble.java
	
2004-10-26 Alain Magloire
	Remove of ICDISignalManager in CDI
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SignalManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Signal.java

2004-10-25 Alain Magloire
	Remove of ICDExpressionManager in CDI
	ICDIExpression changes in the interface.
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/EventManager.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/ExpressionManager.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/Session.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/event/ChangedEvent.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/event/DestroyedEvent.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/model/Expression.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/model/Target.java
	* cdi/rg/eclipse/cdt/debug/mo/core/cdi/model/Variable.java
	
2004-10-24 Alain Magloire
	Changes in ICDITarget.evaluateExpressionToString()
	* org/eclipse/cdt/debug/mi/core/cdi/model/Target.java

2004-10-20 Alain Magloire
	Use the new ICDIDebugger interface

	* mi/org/eclipse/cdt/debug/mi/core/MIInferior.java