@@ -19,7 +19,6 @@ import java.util.Map;
 
 import org.eclipse.cdt.debug.core.cdi.CDIException;
 import org.eclipse.cdt.debug.core.cdi.ICDIConfiguration;
-import org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager;
 import org.eclipse.cdt.debug.core.cdi.model.ICDISharedLibrary;
 import org.eclipse.cdt.debug.mi.core.MIException;
 import org.eclipse.cdt.debug.mi.core.MIFormat;
@@ -47,7 +46,7 @@ import org.eclipse.cdt.debug.mi.core.output.MIShared;
 /**
  * Manager of the CDI shared libraries.
  */
-public class SharedLibraryManager extends Manager implements ICDISharedLibraryManager {
+public class SharedLibraryManager extends Manager {
 
 	ICDISharedLibrary[] EMPTY_SHAREDLIB = {};
 	Map sharedMap;
@@ -180,14 +179,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		return isDeferred;
 	}
 
-	/**
-	 * @deprecated
-	 * @see org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager#setSharedLibraryPaths(String[])
-	 */
-	public void setAutoLoadSymbols(boolean set) throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		setAutoLoadSymbols(target, set);
-	}
 	public void setAutoLoadSymbols(Target target, boolean set) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -200,13 +191,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		}
 	}
 
-	/**
-	 * @deprecated
-	 */
-	public boolean isAutoLoadSymbols() throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		return isAutoLoadSymbols(target);
-	}
 	public boolean isAutoLoadSymbols(Target target) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -224,15 +208,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		return false;
 	}
 
-	/**
-	 * @deprecated
-	 * @param set
-	 * @throws CDIException
-	 */
-	public void setStopOnSolibEvents(boolean set) throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		setStopOnSolibEvents(target, set);
-	}
 	public void setStopOnSolibEvents(Target target, boolean set) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -245,15 +220,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		}
 	}
 
-	/**
-	 * @deprecated
-	 * @return
-	 * @throws CDIException
-	 */
-	public boolean isStopOnSolibEvents() throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		return isStopOnSolibEvents(target);
-	}
 	public boolean isStopOnSolibEvents(Target target) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -271,14 +237,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		return false;
 	}
 
-	/**
-	 * @deprecated
-	 * @see org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager#setSharedLibraryPaths(String[])
-	 */
-	public void setSharedLibraryPaths(String[] libPaths) throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		setSharedLibraryPaths(target, libPaths);
-	}
 	public void setSharedLibraryPaths(Target target, String[] libPaths) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -291,14 +249,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		}
 	}
 
-	/**
-	 * @deprecated
-	 * @see org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager#getSharedLibraryPaths()
-	 */
-	public String[] getSharedLibraryPaths() throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		return getSharedLibraryPaths(target);
-	}
 	public String[] getSharedLibraryPaths(Target target) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -312,14 +262,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		}
 	}
 
-	/**
-	 * @deprecated
-	 * @see org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager#getSharedLibraries()
-	 */
-	public ICDISharedLibrary[] getSharedLibraries() throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		return getSharedLibraries(target);
-	}
 	public ICDISharedLibrary[] getSharedLibraries(Target target) throws CDIException {
 		List sharedList = (List)sharedMap.get(target);
 		if (sharedList != null) {
@@ -328,14 +270,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		return EMPTY_SHAREDLIB;
 	}
 
-	/**
-	 * @deprecated
-	 * @see org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager#loadSymbols()
-	 */
-	public void loadSymbols() throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		loadSymbols(target);
-	}
 	public void loadSymbols(Target target) throws CDIException {
 		MISession mi = target.getMISession();
 		CommandFactory factory = mi.getCommandFactory();
@@ -352,14 +286,6 @@ public class SharedLibraryManager extends Manager implements ICDISharedLibraryMa
 		update(target);
 	}
 
-	/**
-	 * @deprecated
-	 * @see org.eclipse.cdt.debug.core.cdi.ICDISharedLibraryManager#loadSymbols(ICDISharedLibrary[])
-	 */
-	public void loadSymbols(ICDISharedLibrary[] libs) throws CDIException {
-		Target target = ((Session)getSession()).getCurrentTarget();
-		loadSymbols(target, libs);
-	}
 	public void loadSymbols(Target target, ICDISharedLibrary[] libs) throws CDIException {
 		MISession miSession = target.getMISession();
 		CommandFactory factory = miSession.getCommandFactory();
